k8s/birdboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdboard-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: birdboard
  template:
    metadata:
      labels:
        component: birdboard
    spec:
      containers:
        - name: birdboard-deployment
          image: noalistic/birdboard-app
          ports:
            - containerPort: 80
