k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
    - hosts:
        - noah-birdboard.ml
        - www.noah-birdboard.ml
      secretName: noah-birdboard-ml
  rules:
    - host: noah-birdboard.ml
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: birdboard-cluster-ip-service
              servicePort: 80
    - host: www.noah-birdboard.ml
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: birdboard-cluster-ip-service
              servicePort: 80
